<resources>
    <string name="app_name">DCE USP</string>
    <string name="app_name_long">DCE Livre da USP</string>
    <string name="app_description">Aplicativo do DCE Livre da USP, desenvolvido pela diretoria de comunicação da gestão Nossa Voz, em 2018, para auxiliar os estudantes da USP em diversos aspectos da vida acadêmica e universitária.</string>
    <string name="app_facebook_page">www.facebook.com/DCEdaUSP</string>
    <string name="action_settings">Settings</string>

    <string name="menu_title1">Mapa do Campus</string>
    <string name="menu_title2">Fórum</string>
    <string name="menu_title3">Agenda</string>
    <string name="menu_title4">Bandejão</string>
    <string name="menu_title5">Informações úteis</string>
    <string name="menu_title6">Documentos da gestão</string>
    <string name="menu_title7">Notícias</string>
    <string name="menu_title8">Transporte</string>
    <string name="menu_title9">Atendimento</string>
    <string name="menu_title10">Fale conosco!</string>

    <string name="facebook_app_id">992935517526832</string>
    <string name="fb_login_protocol_scheme">fb992935517526832</string>
    <string name="fb_page_id">/169245436486734/feed</string>
    <string name="title_activity_settings">Settings</string>
    <string name="choose_campus">Escolha seu Campus</string>
    <string name="config_main">myConfig</string>
    <string name="entrar">Entrar:</string>
    <string name="sair">Sair:</string>
    <string name="image_content_description">Descrição da imagem</string>
    <string name="eventos">Eventos</string>
    <string name="adicionar_eventos">Adicionar todos os eventos</string>
    <string name="escreva_mensagem">Escreva sua mensagem</string>
    <string name="insira_titulo">Insira um título</string>
    <string name="respostas">Respostas</string>
    <string name="fechar">Fechar</string>
    <string name="post_title">Título do post</string>
    <string name="post_description">Descrição do post.</string>
    <string name="post_date">Nome do autor, data</string>
    <string name="voltar">Voltar</string>
    <string name="answer_author">Autor da resposta</string>
    <string name="answer_text">Texto da resposta</string>
    <string name="answer_date">Hora da resposta</string>
    <string name="answer_dialog">Responder</string>
    <string name="answer_cancel">Cancelar</string>
    <string name="answer_send">OK</string>
    <string name="erase_dialog">Apagar</string>
    <string name="forum_dialog">Criar novo fórum</string>
    <string name="forum_dialog_ok">Criar</string>
    <string name="forum_dialog_cancel">Cancelar</string>
    <string name="forum_title">Insira um nome</string>
    <string name="forum_desc">Descreva o novo fórum</string>
    <string name="forums">Fóruns</string>
    <!--<string name="default_web_client_id">675152987162-u3vcnf1erusv6fmd1cei4o9uo3a068kq.apps.googleusercontent.com</string>-->

    <string-array name="onibus_campus">
        <item>http://www.sptrans.com.br/</item>
        <item>http://www.puspsc.usp.br/horario-de-onibus-areas-1-e-2/</item>
        <item>http://www.puspsc.usp.br/horario-de-onibus-areas-1-e-2/</item>
        <item>http://www.sptrans.com.br/</item>
        <item>http://www.esalq.usp.br/atad/sctrans</item>
        <item>https://www.puspfc.usp.br/?page_id=48</item>
        <item>http://ccint.fmvz.usp.br/pt/novidades/13-pt/301-transporte-campus-pirassununga</item>
        <item>http://www.bauru.usp.br/?page_id=22</item>
        <item>http://www.puspsc.usp.br/horario-de-onibus-areas-1-e-2/</item>
        <item>http://site.eel.usp.br/informacoes/rotas-de-acesso-ao-campus</item>
        <item>http://www.sptrans.com.br/</item>
    </string-array>

    <string-array name="atendimento_campus">
        <item>http://www.hu.usp.br/</item>
        <item>http://www.saocarlos.usp.br/index.php?option=com_content&amp;task=view&amp;id=133&amp;Itemid=107</item>
        <item>http://www5.each.usp.br/ubasleste/</item>
        <item>http://www.hu.usp.br/</item>
        <item>http://www.cclq.usp.br/ubas/</item>
        <item>http://www.prefeiturarp.usp.br/page.asp?url=ubas</item>
        <item>http://www.puspfc.usp.br/?page_id=86</item>
        <item>http://www.ccb.usp.br/saude.php</item>
        <item>http://www.hu.usp.br/</item>
        <item>http://www.hu.usp.br/</item>
        <item>http://www.hu.usp.br/</item>
    </string-array>

    <string-array name="list_campus">
        <item>Butantã</item>
        <item>São Carlos</item>
        <item>EACH</item>
        <item>Sanfran</item>
        <item>Piracicaba</item>
        <item>Ribeirão Preto</item>
        <item>Pirassununga</item>
        <item>Bauru</item>
        <item>Santos</item>
        <item>Lorena</item>
        <item>Quadrilátero Saúde</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
