<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grena">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/post_margin"
        android:orientation="vertical"
        android:gravity="center">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabClosePost"
            app:fabSize="mini"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:tint="@color/grena"
            app:backgroundTint="@color/creme"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/creme"
        android:text="@string/fechar"/>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/post_margin"
        android:id="@+id/postMain"
        app:cardCornerRadius="15dp"
        android:layout_alignParentTop="true"
        app:cardBackgroundColor="@color/creme">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_margin="5dp"
            android:elevation="2dp"
            android:orientation="vertical"
            android:gravity="center">


            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabDeletePost"
                app:fabSize="mini"
                android:layout_width="43dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_del"
                android:tint="@color/grena"
                app:backgroundTint="@color/creme"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/image_content_description"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/mainPostImage"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/mainPostTitle"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/mainPostDescription"
            android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:paddingTop="5dp"
                android:layout_margin="15dp"
                android:id="@+id/postDateAndAuthor"
                android:textStyle="italic"
                android:textSize="16sp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/postMain"
        android:text="@string/respostas"
        android:textColor="@color/creme"/>

</RelativeLayout>